Small trick by splitting the name to avoid weird stretch if the transition changes the number of lines

--- a/static/examples/sticky-header/vanilla/style.css
+++ b/static/examples/sticky-header/vanilla/style.css
@@ -209,6 +209,10 @@ h1 {
 	margin: 0 0 0 0;
 }
 
+.author__name > * {
+	display: inline-block;
+}
+
 .author__contact {
 	grid-area: Contact;
 }
